--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./src/dataService.ts"></script>
+    <script src="./test/index.ts"></script>
     <!-- <script src="./build/index.js"></script> -->
 </body>
 
